chanapi-macros/tests/ui/fail_mut_self.stderr
error: chanapi::service: receiver must be `&self` (not `&mut self`)
 --> tests/ui/fail_mut_self.rs:3:18
  |
3 |     async fn bar(&mut self);
  |                  ^
