chanapi-macros/tests/ui/fail_mut_self.rs
#[chanapi::service]
pub trait FooService {
    async fn bar(&mut self);
}

fn main() {}
